# TechTheTide-OpenCV

./: CMakeLists.txt  README.md
ConnectionToHL/: connectionToHL.cpp  connectionToHL.h
eceuil_detection/: CMakeLists.txt  code_greenDetection.txt  main.cpp
ecueilDetection/: CMakeLists.txt  ecueilDetection.cpp  ecueilDetection.h  main.cpp
girouette/: CMakeLists.txt  gir.cpp  gir.h  girouette.cpp  girouette.h  main.cpp
